; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_listbox.c_buttonpress.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/user32/extr_listbox.c_buttonpress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@WAIT = common dso_local global i32 0, align 4
@WM_LBUTTONDOWN = common dso_local global i32 0, align 4
@MK_LBUTTON = common dso_local global i32 0, align 4
@WM_LBUTTONUP = common dso_local global i32 0, align 4
@REDRAW = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i32)* @buttonpress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @buttonpress(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %5, align 4
  %9 = load i32, i32* %6, align 4
  %10 = shl i32 %9, 16
  %11 = add nsw i32 %8, %10
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* @WAIT, align 4
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @WM_LBUTTONDOWN, align 4
  %15 = load i32, i32* @MK_LBUTTON, align 4
  %16 = load i32, i32* %7, align 4
  %17 = call i32 @SendMessageA(i32 %13, i32 %14, i32 %15, i32 %16)
  %18 = load i32, i32* %4, align 4
  %19 = load i32, i32* @WM_LBUTTONUP, align 4
  %20 = load i32, i32* %7, align 4
  %21 = call i32 @SendMessageA(i32 %18, i32 %19, i32 0, i32 %20)
  %22 = load i32, i32* @REDRAW, align 4
  ret void
}

declare dso_local i32 @SendMessageA(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
